# sandbox

./: .gitignore  README.md  main.py  pyproject.toml
data/: rose-pine-moon.json
libs/: __init__.py  exceptions.py
scripts/: fetcher.py  template_generator.py  theme_builder.py  vscode.py
templates/: vscode-theme.json.j2
